(fix) fixes charisma input bug and submit button overflow (#21)
* (fix) charisma modifer bug

* (style) fix overflow of submit button

--- a/src/app/components/common/base/global.scss
+++ b/src/app/components/common/base/global.scss
@@ -26,11 +26,14 @@
 }
 
 .generatorFormContainer {
-  background-color: rgba(220,220,220,0.6);
   height: 499px;
   border-radius: .28571429rem;
 }
 
+.generatorForm {
+  background-color: rgba(220,220,220,0.6);
+  padding-bottom: 10px;
+}
 
 .fieldContainer {
   display: grid;
